docs: Clarify distinction between installation guide and MCP server structure documentation

--- a/docs/설치_및_구성_가이드.md
+++ b/docs/설치_및_구성_가이드.md
@@ -2,7 +2,14 @@
 
 ## 개요
 
-이 문서는 AI 에러 로그 분석 시스템을 다른 프로젝트에 통합하거나 독립적으로 설치하는 방법을 안내합니다. 특히 **MCP (Model Context Protocol) 서버 구조**와 **다른 AI 시스템 (예: aipro)에 설치하는 방법**을 중점적으로 설명합니다.
+이 문서는 **"어떻게 설치하고 설정하는가"**에 집중합니다. 
+
+- ✅ **전체 시스템 설치** (웹 UI + API 서버 + MCP 서버)
+- ✅ **MCP 서버만 설치** (다른 AI 시스템에서 사용: aipro, Claude Desktop 등)
+- ✅ **설정 방법** (환경 변수, 포트 설정 등)
+- ✅ **문제 해결** (설치/실행 중 발생하는 오류 해결)
+
+**구조와 동작 방식**이 궁금하시다면 → [`MCP_서버_구조.md`](MCP_서버_구조.md) 참조
 
 ## 시스템 요구사항
 
@@ -147,73 +154,139 @@ npm run api-server
 
 브라우저에서 http://localhost:5183 으로 접속하세요.
 
-## MCP 서버 설치 및 구성 (다른 AI 시스템용)
+## MCP 서버 설치 (다른 AI 시스템용: aipro, Claude Desktop 등)
 
-### MCP 서버란?
+### 시나리오: aipro에서 MCP 서버 사용하기
 
-**MCP (Model Context Protocol)**는 AI 모델과 외부 도구/서비스를 연결하는 표준 프로토콜입니다. 이 프로젝트는 Python으로 구현된 MCP 서버를 포함하고 있으며, 다른 AI 시스템 (예: aipro, Claude Desktop 등)에서도 사용할 수 있습니다.
+이 프로젝트의 **MCP 서버만** 사용하여 aipro 같은 다른 AI 시스템에서 에러 로그 분석 기능을 사용할 수 있습니다.
 
-### MCP 서버 독립 설치
+### 설치 방법
 
-#### 1. Python MCP 서버만 사용하기
-
-**필요 파일:**
-- `mcp-error-log-analyzer.py` (MCP 서버)
-- Python 의존성: `mcp`, `anthropic`
-
-**설치 방법:**
+#### 1단계: 프로젝트 다운로드
 
 ```bash
-# 1. Python 의존성 설치
+# GitHub에서 프로젝트 클론
+git clone https://github.com/hwangjungyong/mcp_error_log_01.git
+cd mcp_error_log_01
+```
+
+또는 **MCP 서버 파일만** 다운로드:
+- GitHub에서 `mcp-error-log-analyzer.py` 파일만 다운로드
+
+#### 2단계: Python 의존성 설치
+
+```bash
 pip install mcp anthropic
-
-# 2. MCP 서버 파일 복사
-cp mcp-error-log-analyzer.py /your/mcp/servers/
-
-# 3. 실행 권한 부여 (Linux/macOS)
-chmod +x mcp-error-log-analyzer.py
 ```
 
-**MCP 서버 설정 파일 (예: Claude Desktop)**
+#### 3단계: 환경 변수 설정
 
-Claude Desktop의 경우 `claude_desktop_config.json`에 추가:
+**Anthropic Claude API 키 설정** (필수):
+```bash
+# Windows (PowerShell)
+$env:ANTHROPIC_API_KEY="sk-ant-..."
 
-```json
-{
-  "mcpServers": {
-    "error-log-analyzer": {
-      "command": "python",
-      "args": [
-        "/path/to/mcp-error-log-analyzer.py"
-      ],
-      "env": {
-        "ANTHROPIC_API_KEY": "your-api-key-here"
-      }
-    }
-  }
-}
+# Windows (CMD)
+set ANTHROPIC_API_KEY=sk-ant-...
+
+# macOS/Linux
+export ANTHROPIC_API_KEY="sk-ant-..."
 ```
 
-**aipro 또는 다른 AI 시스템의 경우:**
+#### 4단계: AI 시스템에 MCP 서버 등록
 
-각 AI 시스템의 MCP 설정 방법에 따라:
-1. MCP 서버 경로 지정
-2. Python 인터프리터 경로 지정
-3. 환경 변수 설정 (ANTHROPIC_API_KEY 등)
+**aipro의 경우:**
 
-#### 2. 전체 시스템 설치 (권장)
+1. **MCP 서버 파일 위치 확인**
+   ```bash
+   # aipro의 MCP 서버 디렉토리 확인 (시스템마다 다름)
+   # 예: C:\aipro\mcp-servers\ 또는 ~/aipro/mcp-servers/
+   ```
 
-**장점:**
-- 웹 UI 제공
-- 데이터베이스 저장 기능
-- 이력 관리 기능
-- 독립 실행 가능
+2. **MCP 서버 파일 복사**
+   ```bash
+   # Windows
+   copy mcp-error-log-analyzer.py C:\aipro\mcp-servers\
+   
+   # macOS/Linux
+   cp mcp-error-log-analyzer.py ~/aipro/mcp-servers/
+   ```
 
-**설치 단계:**
+3. **aipro 설정 파일에 등록**
+   - aipro의 설정 파일 형식에 맞게 MCP 서버 등록
+   - 예시 (형식은 aipro 문서 참조):
+   ```json
+   {
+     "mcpServers": {
+       "error-log-analyzer": {
+         "command": "python",
+         "args": [
+           "C:\\path\\to\\mcp-error-log-analyzer.py"
+         ],
+         "env": {
+           "ANTHROPIC_API_KEY": "sk-ant-..."
+         }
+       }
+     }
+   }
+   ```
+
+4. **aipro 재시작**
+   - 설정 변경 후 aipro 재시작
+   - MCP 서버가 자동으로 로드됨
+
+**Claude Desktop의 경우:**
+
+1. **설정 파일 위치**
+   - Windows: `%APPDATA%\Claude\claude_desktop_config.json`
+   - macOS: `~/Library/Application Support/Claude/claude_desktop_config.json`
+
+2. **설정 파일에 추가**
+   ```json
+   {
+     "mcpServers": {
+       "error-log-analyzer": {
+         "command": "python",
+         "args": [
+           "C:\\path\\to\\mcp-error-log-analyzer.py"
+         ],
+         "env": {
+           "ANTHROPIC_API_KEY": "sk-ant-..."
+         }
+       }
+     }
+   }
+   ```
+
+3. **Claude Desktop 재시작**
+
+#### 5단계: 사용 방법
+
+aipro 또는 Claude Desktop에서:
+1. AI와 대화 중 에러 로그를 붙여넣기
+2. "error log mcp를 이용하여 아래의 에러로그를 확인해줘"라고 질문
+3. AI가 자동으로 MCP 서버를 호출하여 분석
+4. 분석 결과 확인
+
+**처리 플로우 및 동작 방식**은 [`MCP_서버_구조.md`](MCP_서버_구조.md)의 "사용자 질문 처리 플로우" 섹션을 참조하세요.
+
+### 설치 확인
 
 ```bash
-# 1. 프로젝트 복제 또는 다운로드
-git clone <repository-url>
+# Python 스크립트 직접 실행 테스트
+python mcp-error-log-analyzer.py --help
+
+# 또는 간단한 테스트
+python -c "from mcp.server import Server; print('MCP SDK 설치 확인 완료')"
+```
+
+### 전체 시스템 설치 (웹 UI 포함)
+
+웹 UI와 데이터베이스 기능을 포함한 전체 시스템을 설치하려면:
+
+```bash
+# 1. 프로젝트 클론
+git clone https://github.com/hwangjungyong/mcp_error_log_01.git
 cd mcp_error_log_01
 
 # 2. Node.js 의존성 설치
@@ -223,134 +296,25 @@ npm install
 pip install mcp anthropic
 
 # 4. 환경 변수 설정
-# .env 파일 생성 및 설정
 echo "PORT=3011" > .env
 echo "VITE_PORT=5183" >> .env
 echo "VITE_API_BASE_URL=http://localhost:3011" >> .env
 
 # 5. 서버 실행
 npm start
+# 또는
+start-dev-err-log.bat  # Windows
 ```
 
-### MCP 서버 통신 방식
+**접속:**
+- 프론트엔드: http://localhost:5183
+- API 서버: http://localhost:3011
 
-#### 표준 입출력 (stdio) 통신
-
-MCP 서버는 표준 입출력을 통해 JSON-RPC 형식으로 통신합니다:
-
-**요청 형식:**
-```json
-{
-  "jsonrpc": "2.0",
-  "id": 1,
-  "method": "tools/call",
-  "params": {
-    "name": "analyze_error_log",
-    "arguments": {
-      "log_content": "에러 로그 내용...",
-      "log_file_path": "경로 (선택)"
-    }
-  }
-}
-```
-
-**응답 형식:**
-```json
-{
-  "jsonrpc": "2.0",
-  "id": 1,
-  "result": {
-    "content": [
-      {
-        "type": "text",
-        "text": "<JSON_START>{...}<JSON_END>"
-      }
-    ]
-  }
-}
-```
-
-#### Node.js에서 MCP 서버 호출
-
-```javascript
-import { spawn } from 'child_process';
-
-// Python MCP 서버 실행
-const pythonProcess = spawn('python', ['mcp-error-log-analyzer.py'], {
-  stdio: ['pipe', 'pipe', 'pipe'],
-  encoding: 'utf-8'
-});
-
-// 요청 전송
-const request = {
-  jsonrpc: '2.0',
-  id: 1,
-  method: 'tools/call',
-  params: {
-    name: 'analyze_error_log',
-    arguments: {
-      log_content: '에러 로그 내용...'
-    }
-  }
-};
-
-pythonProcess.stdin.write(JSON.stringify(request) + '\n');
-
-// 응답 수신
-let output = '';
-pythonProcess.stdout.on('data', (data) => {
-  output += data.toString();
-  
-  // JSON 결과 추출
-  const jsonMatch = output.match(/<JSON_START>([\s\S]*?)<JSON_END>/);
-  if (jsonMatch) {
-    const result = JSON.parse(jsonMatch[1]);
-    console.log('분석 결과:', result);
-  }
-});
-```
-
-### 다른 AI 시스템에 통합하기
-
-#### aipro에 통합
-
-**방법 1: MCP 서버만 사용**
-1. `mcp-error-log-analyzer.py` 파일을 aipro의 MCP 서버 디렉토리에 복사
-2. aipro의 설정 파일에 MCP 서버 등록
-3. aipro에서 "에러 로그 분석" 도구 사용
-
-**방법 2: 전체 시스템 통합**
-1. 이 프로젝트를 독립적으로 실행
-2. aipro에서 HTTP API를 통해 연동
-3. 또는 aipro의 웹뷰 기능을 사용하여 iframe으로 임베드
-
-#### Claude Desktop에 통합
-
-**설정 파일 위치:**
-- **Windows**: `%APPDATA%\Claude\claude_desktop_config.json`
-- **macOS**: `~/Library/Application Support/Claude/claude_desktop_config.json`
-
-**설정 예시:**
-```json
-{
-  "mcpServers": {
-    "error-log-analyzer": {
-      "command": "python",
-      "args": [
-        "C:\\path\\to\\mcp-error-log-analyzer.py"
-      ],
-      "env": {
-        "ANTHROPIC_API_KEY": "sk-ant-..."
-      }
-    }
-  }
-}
-```
-
-**사용 방법:**
-1. Claude Desktop 재시작
-2. Claude와 대화 중 "@error-log-analyzer" 언급
-3. "에러 로그 분석" 도구 사용
+**장점:**
+- 웹 UI 제공
+- 데이터베이스 저장 기능
+- 이력 관리 기능
+- 독립 실행 가능
 
 ## 다른 프로젝트에 통합하기
 
@@ -576,11 +540,30 @@ Copy-Item data\database.db -Destination "data\backups\database_$(Get-Date -Forma
 cp data/database.db "data/backups/database_$(date +%Y%m%d_%H%M%S).db"
 ```
 
+## 문서 구조 안내
+
+이 프로젝트의 문서는 다음과 같이 구분됩니다:
+
+- **`설치_및_구성_가이드.md`** (이 문서): **"어떻게 설치하는가"**
+  - 전체 시스템 설치 방법
+  - MCP 서버만 설치하는 방법 (aipro, Claude Desktop 등)
+  - 설정 및 문제 해결
+
+- **`MCP_서버_구조.md`**: **"어떻게 동작하는가"**
+  - MCP 서버의 내부 구조
+  - 통신 프로토콜
+  - 사용자 질문 처리 플로우 (어떤 처리가 일어나는지)
+  - 수집되는 정보
+
+- **`사용자_가이드.md`**: **"어떻게 사용하는가"**
+  - 웹 UI 사용 방법
+  - 기능별 사용 가이드
+
 ## 추가 리소스
 
 - **프로젝트 문서**: `README.md`
-- **사용자 가이드**: `docs/사용자_가이드.md` (별도 생성 필요)
-- **API 문서**: `docs/API_문서.md` (별도 생성 필요)
+- **MCP 서버 구조**: [`MCP_서버_구조.md`](MCP_서버_구조.md)
+- **사용자 가이드**: [`사용자_가이드.md`](사용자_가이드.md)
 
 ## 지원
 
